<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_grafh"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.liga.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_equipoFragment"
            app:destination="@id/equipoFragment" />
    </fragment>
    <fragment
        android:id="@+id/equipoFragment"
        android:name="com.example.liga.EquipoFragment"
        android:label="@string/fragmentoInicial"
        tools:layout="@layout/fragment_equipo" >
        <action
            android:id="@+id/action_equipoFragment_to_jugadoresFragment"
            app:destination="@id/jugadoresFragment" />
    </fragment>
    <fragment
        android:id="@+id/jugadoresFragment"
        android:name="com.example.liga.DetalleFragment"
        android:label="@string/fragmentoSegundo"
        tools:layout="@layout/fragment_jugadores" />
</navigation>