<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="139dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="117dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="121dp"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/text_2" />

    <TextView
        android:id="@+id/text_4"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="17dp"
        android:text="@string/text4"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_3" />

    <TextView
        android:id="@+id/text_nom_equipo"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="121dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nom_estadio"
        android:layout_width="123dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_2"
        app:layout_constraintTop_toBottomOf="@+id/text_nom_equipo" />

    <TextView
        android:id="@+id/text_capacidad"
        android:layout_width="126dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_3"
        app:layout_constraintTop_toBottomOf="@+id/text_nom_estadio" />

    <TextView
        android:id="@+id/text_fundacion"
        android:layout_width="126dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_3"
        app:layout_constraintTop_toBottomOf="@+id/text_nom_estadio" />

    <ImageView
        android:id="@+id/foto_estadio"
        android:layout_width="412dp"
        android:layout_height="247dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_4"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>